Began working on more text and outlines for the about page

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -7,6 +7,14 @@ p.AboutUsText {
 	font-size: 1.5em;
 }
 
+/* img tag styles */
+img.ReimiAttackingEnemy {
+	width: 1900px;
+	height: 500px;
+	margin-top: 700px;
+	margin-left: -10px;
+}
+
 #aboutUsBackground {
 	background-color: #000;
 	margin-left: -10px;
@@ -24,4 +32,8 @@ p.AboutUsText {
 #aboutUsText {
 	margin-left: 1300px;
 	margin-top: -720px;
+}
+
+#aboutMenuText {
+	
 }
