--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,3 +1,4 @@
+/* font face rules */
 @font-face {
 	font-family: Baskerville;
 	src: url("../Fonts/LibreBaskerville-Regular.ttf");
@@ -6,11 +7,7 @@
 @font-face {
 	font-family: Plantin;
 	src: url("../Fonts/Plantin.otf");
-}
-
-body {
-
-}
+} /* End font face rules */
 
 /* p tag styles */
 p.AboutUsText {
@@ -20,11 +17,11 @@ p.AboutUsText {
 	font-family: Baskerville, Plantin, serif;
 }
 
-/* img tag styles */
-img.FacebookLogo {
-	width: 50px;
-	height: 50px;
-}
+p.CopyrightText {
+	margin-top: 20px;
+	margin-left: 20px;
+	color: #FFF;
+} /* End p tag styles */
 
 #aboutUsBackground {
 	background-color: #000;
@@ -72,10 +69,4 @@ img.FacebookLogo {
 
 #MainNav a:hover {
   background-color: #FF8000;
-}
-
-p.CopyrightText {
-	margin-top: 20px;
-	margin-left: 20px;
-	color: #FFF;
 }
